[package]
name = "captain_crunch"
version = "0.1.0"
authors = ["Thomas Graves <0o0o0o0o0@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
permutator = "0.4.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
pbr = "1.0.4"
